# ergani-tauri

./: .cursorrules  LICENSE.txt  README.md  build.js  create-release-directories.js  index.html  installer.nsi  package-lock.json  package.json  tsconfig.json  update.json  vite.config.ts
.github/: README.md
.github/workflows/: release.yml
backend/: .env  README.md  argies.py  combiner.py  excel_to_json.py  gen_info.py  get_gen_info.py  main.py  preprocess_actual.py  preprocess_planned.py  remove_rows.py  requirements.txt  schedule.py  summary.py  types.json  utils.py
docs/: index.html
public/: download.html
releases/linux/: Ergani-Schedule-Manager-0.9.5.AppImage  Ergani-Schedule-Manager-1.0.0.AppImage
releases/macos/: Ergani-Schedule-Manager-0.9.5-arm64.dmg  Ergani-Schedule-Manager-0.9.5.dmg  Ergani-Schedule-Manager-1.0.0-arm64.dmg  Ergani-Schedule-Manager-1.0.0.dmg  README.md
src/: App.css  App.js  App.tsx  main.js  main.tsx  types.js  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CombinedDataTable.js  CombinedDataTable.tsx  DataDisplay.js  DataDisplay.tsx  DownloadPage.js  DownloadPage.tsx  EmployeeSortControls.js  EmployeeSortControls.tsx  ErrorDisplay.js  ErrorDisplay.tsx  FilterBadge.js  FilterBadge.tsx  FilterControls.js  FilterControls.tsx  LoadingIndicator.js  LoadingIndicator.tsx  LoginForm.js  LoginForm.tsx  PaginationControls.js  PaginationControls.tsx  ProcessingForm.js  ProcessingForm.tsx  RegisterForm.js  RegisterForm.tsx  SummaryDataTable.js  SummaryDataTable.tsx  UpdateChecker.js  UpdateChecker.tsx
src/hooks/: useAppState.js  useAppState.ts
src/utils/: dateUtils.js  dateUtils.ts  displayUtils.js  displayUtils.tsx  errorHandling.js  errorHandling.ts  updater.js  updater.ts
